--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   firebase_auth: ^6.0.2
   cloud_firestore: ^6.0.1
 
+  # AI
+  http: ^1.2.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
